# LargeIntArithmeticOps

./: .gitignore  CMakeLists.txt  README.md  main.cpp
LargeIntArithmeticOps/: LICENSE
example/: computeAtomsinCalcium.cpp  computeExponentofLargeInt.cpp
include/: ArithmeticOps.h  FFTHelperFuncs.h  TypeManipulation.h
src/: ArithmeticOps.cpp  FFTHelperFuncs.cpp  TypeManipulation.cpp
test/: ArithmeticOps_test.cpp  FFTHelperFuncs_test.cpp  TypeManipulation_test.cpp
